<resources>
    <string name="app_name" translatable="false">TaskBeats</string>
    <string name="home_title" translatable="false">Task Beat</string>

    <!--about TASK - create and update-->
    <string name="new_task">New Task</string>
    <string name="write_new_task">write here the new task</string>
    <string name="bt_new_task">create</string>
    <string name="bt_delete_task">delete</string>

    <string name="update_task">Update Task</string>
    <string name="update_new_task">update this task</string>
    <string name="bt_update_task">update</string>

    <!--about CATEGORY - create and update-->
    <string name="new_category">New Category</string>
    <string name="write_new_category">write here the new category</string>
    <string name="bt_create_category">create</string>

    <string name="bt_delete_category">delete</string>

    <!--about INFORMATION CATEGORY -->
    <string name="title_about_category">Deleting Category...</string>
    <string name="info_about_category">DANGER! you are deleting your category, all the tasks this category will are deleting.</string>
    <string name="btnDel_about_category">delete all tasks this category</string>

    <string name="no_found_category_and_task">no category found !</string>
    <string name="no_found_description">please create one</string>

    <string name="empty_new_category">new category</string>
    <string name="by_maur_cio_g">by Maurício G.</string>
</resources>