<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_TitleTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="23dp"
        android:text="@string/new_task"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_category"
        android:layout_margin="20dp"
        android:layout_marginEnd="110sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30sp"
        android:hint="@string/write_new_task">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiv_writeTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:minHeight="35dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bv_crTask"
        android:text="@string/bt_new_task"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60sp"
        android:layout_marginEnd="60sp"
        />

</LinearLayout>